--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <div data-netlify-recaptcha="true"></div>
             </div>
             <input
-              type="button"
+              type="submit"
               value="Submit"
               class="contact__button button"
             />
