Netlify Form button fixed

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <h2 class="section-title">Contact</h2>
 
         <div class="contact__container bd-grid">
-          <form action="POST" data-netlify="true" class="contact__form">
+          <form method="POST" data-netlify="true" class="contact__form">
             <input type="text" placeholder="Name" class="contact__input" />
             <input type="mail" placeholder="Email" class="contact__input" />
             <textarea
