--- a/index.html
+++ b/index.html
@@ -228,10 +228,20 @@
 
         <div class="contact__container bd-grid">
           <form method="POST" data-netlify="true" class="contact__form">
-            <input type="text" placeholder="Name" class="contact__input" />
-            <input type="mail" placeholder="Email" class="contact__input" />
+            <input
+              type="text"
+              name="name"
+              placeholder="Name"
+              class="contact__input"
+            />
+            <input
+              type="mail"
+              name="email"
+              placeholder="Email"
+              class="contact__input"
+            />
             <textarea
-              name=""
+              name="contact"
               id=""
               cols="0"
               rows="10"
