--- a/index.html
+++ b/index.html
@@ -202,22 +202,42 @@
 
         <div class="work__container bd-grid">
           <div class="work__img">
-            <img src="assets/img/work1.jpg" alt="" />
+            <a href="https://campertunity.com">
+              <img
+                src="assets/img/campertunity.jpg"
+                alt="campertunity website"
+              />
+            </a>
           </div>
           <div class="work__img">
-            <img src="assets/img/work2.jpg" alt="" />
+            <a href="https://nahomkibreab.github.io/covid19-react-project">
+              <img src="assets/img/covid19.jpg" alt="covid19 report website" />
+            </a>
           </div>
           <div class="work__img">
-            <img src="assets/img/work3.jpg" alt="" />
+            <a href="http://www.shalomlsc.org">
+              <img src="assets/img/shalom.jpg" alt="shalom church website" />
+            </a>
           </div>
           <div class="work__img">
-            <img src="assets/img/work4.jpg" alt="" />
+            <a
+              href="https://play.google.com/store/apps/details?id=com.nknahom.biblenames.dictionarytigrinyanames"
+            >
+              <img
+                src="assets/img/mefthiqual.jpg"
+                alt="mefthi qual android app"
+              />
+            </a>
           </div>
           <div class="work__img">
-            <img src="assets/img/work5.jpg" alt="" />
+            <a href="https://github.com/NahomKibreab/News_App">
+              <img src="assets/img/newsapp.jpg" alt="news app" />
+            </a>
           </div>
           <div class="work__img">
-            <img src="assets/img/work6.jpg" alt="" />
+            <a href="https://github.com/NahomKibreab/Popular-Movies-Stage-1">
+              <img src="assets/img/movieapp.jpg" alt="popular movie app"
+            /></a>
           </div>
         </div>
       </section>
