--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
               With my over +7 years of experience in the IT field, working in
               various industries such as telecom, solar energy, as well as in
               coaching, training, and leadership, I'm super excited to join the
-              world of the software development industry and to use my previous
-              and my new skills to solve our community problems.
+              world of the software development industry and to use my previous experience
+              with my new skills I gained from coding to solve our community problems.
             </p>
           </div>
         </div>
