--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               various industries such as telecom, solar energy, as well as in
               coaching, training, and leadership, I'm super excited to join the
               world of the software development industry and to use my previous experience
-              with my new skills I gained from coding to solve our community problems.
+              with the new skills I gained from coding to solve our community problems.
             </p>
           </div>
         </div>
