--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
           </div>
           <div class="work__img">
             <a href="https://github.com/NahomKibreab/News_App">
-              <img src="assets/img/newsapp.jpg" alt="news app" />
+              <img src="assets/img/work1.jpg" alt="news app" />
             </a>
           </div>
           <div class="work__img">
             <a href="https://github.com/NahomKibreab/Popular-Movies-Stage-1">
-              <img src="assets/img/movieapp.jpg" alt="popular movie app"
+              <img src="assets/img/work2.jpg" alt="popular movie app"
             /></a>
           </div>
         </div>
