--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="home__data">
           <h1 class="home__title">
             Hi,<br />I'am <span class="home__title-color">Nahom</span><br />
-            MERN Software Developer
+            Full-stack Developer
           </h1>
 
           <a href="#contact" class="button">Contact</a>
