--- a/index.html
+++ b/index.html
@@ -89,18 +89,26 @@
           </div>
 
           <div>
-            <h2 class="about__subtitle">Hi, my name is Nahom Mehanzel</h2>
+            <h2 class="about__subtitle">Hi, my name is Nahom Kibreab</h2>
             <p class="about__text">
-              I am a Junior full-stack software developer and passionate about
-              tech and innovation. I have developed and deployed a few
-              applications for both web and android applications.
+              I'm a seasoned full-stack software developer with over 7 years
+              of experience in the IT industry. I have a strong track record
+              of developing high-quality web and mobile applications for 
+              various industries. I'm passionate about using technology to 
+              solve real-world problems and make a positive impact on the community.
             </p>
             <p class="about__text">
-              With my over +7 years of experience in the IT field, working in
-              various industries such as telecom, solar energy, as well as in
-              coaching, training, and leadership, I'm super excited to join the
-              world of the software development industry and to use my previous experience
-              with the new skills I gained from coding to solve our community problems.
+              Throughout my career, I've honed my skills in developing scalable and
+              maintainable software applications that meet the unique needs of each
+              project. I'm proficient in several programming languages, frameworks,
+              and technologies, including React, GraphQL, Node.js, Typescript, and Java. 
+              I'm also familiar with database management and cloud infrastructure.
+            </p>
+            <p class="about__text">
+              Whether you're looking to develop a new software application, need 
+              assistance with an existing project, or want to discuss how technology
+              can help you achieve your goals, I'm here to help. Let's work together
+              to make a positive impact on the world through technology.
             </p>
           </div>
         </div>
