--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
           <div>
             <h2 class="skills__subtitle">Profesional Skills</h2>
             <p class="skills__text">
-              I can comfortably able to develop a website using MERN Stack
-              techonologies as well as an android application using Android
-              Studio(Java)
+              I am comfortable with developing websites using MERN 
+              Stack technologies and building Android applications. 
+              I have experience with both and feel confident in my 
+              ability to create effective and efficient products
             </p>
             <div class="skills__data">
               <div class="skills__names">
@@ -133,7 +134,7 @@
               </div>
               <div class="skills__bar skills__html"></div>
               <div>
-                <span class="skills__percentage">95%</span>
+                <span class="skills__percentage">100%</span>
               </div>
             </div>
             <div class="skills__data">
@@ -153,7 +154,7 @@
               </div>
               <div class="skills__bar skills__js"></div>
               <div>
-                <span class="skills__percentage">82%</span>
+                <span class="skills__percentage">100%</span>
               </div>
             </div>
             <div class="skills__data">
@@ -163,7 +164,7 @@
               </div>
               <div class="skills__bar skills__react"></div>
               <div>
-                <span class="skills__percentage">70%</span>
+                <span class="skills__percentage">85%</span>
               </div>
             </div>
             <div class="skills__data">
@@ -173,7 +174,7 @@
               </div>
               <div class="skills__bar skills__node"></div>
               <div>
-                <span class="skills__percentage">65%</span>
+                <span class="skills__percentage">95%</span>
               </div>
             </div>
             <div class="skills__data">
@@ -183,7 +184,7 @@
               </div>
               <div class="skills__bar skills__mongodb"></div>
               <div>
-                <span class="skills__percentage">65%</span>
+                <span class="skills__percentage">85%</span>
               </div>
             </div>
             <div class="skills__data">
