--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="l-header">
       <nav class="nav bd-grid">
         <div>
-          <a href="#" class="nav__logo">Nahom Mehanzel</a>
+          <a href="#" class="nav__logo">Nahom Kibreab</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
