--- a/index.html
+++ b/index.html
@@ -239,14 +239,14 @@
             </a>
           </div>
           <div class="work__img">
-            <a href="https://github.com/NahomKibreab/News_App">
-              <img src="assets/img/work1.jpg" alt="news app" />
+            <a href="https://superhandcleaningservice.com/">
+              <img src="assets/img/image.jpg" alt="Super hand cleaning" />
             </a>
           </div>
           <div class="work__img">
-            <a href="https://github.com/NahomKibreab/Popular-Movies-Stage-1">
-              <img src="assets/img/work2.jpg" alt="popular movie app"
-            /></a>
+            <a href="https://github.com/NahomKibreab/News_App">
+              <img src="assets/img/work1.jpg" alt="news app" />
+            </a>
           </div>
         </div>
       </section>
