--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </div>
           <div class="work__img">
             <a href="https://superhandcleaningservice.com/">
-              <img src="assets/img/image.jpg" alt="Super hand cleaning" />
+              <img src="assets/img/image.png" alt="Super hand cleaning" />
             </a>
           </div>
           <div class="work__img">
